--- a/layout/_layout.scss
+++ b/layout/_layout.scss
@@ -6,9 +6,7 @@
 
 body {
     font-family: $tipografia-principal;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @extend %flex-columna;
     color: $color-secundario
 }
 
@@ -16,42 +14,6 @@ header {
     width: 100%;
     background-color: $color-secundario;
     height: 50px;
-    .contenedor-logo {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 10px;
-        box-sizing: border-box;
-        .logo {
-            background-color: $color-fondo-secundario;
-            color: $color-principal;
-            font-family: $tipografia-secundaria;
-            font-weight: bold;
-            font-size: 45px;
-            line-height: 50px;
-            margin: 0;
-            padding: 0 10px;
-        }
-    }
-}
-
-.contenedor-banner {
-    width: 100%;
-    min-height: 400px;
-    background-image: url(https://frontend-proyecto-comics.adaitw.org/hero.jpg);
-    background-size: cover;
-    position: relative;
-    &::before {
-        content:'';
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: rgba(0,0,0,0.5);
-    }
 }
 
 main {
@@ -68,31 +30,9 @@ main {
             font-size: 1.5em;
             font-weight: bold;
         }
-        .contenedor-busqueda {
-            @extend %espaciar-flex;
-            .contenedor-input-busqueda {
-                position: relative;
-                min-width: 50%;
-                .input-busqueda {
-                    border: 0;
-                    border-bottom: 2px solid $color-secundario;
-                    width: 100%;
-                    padding: 5px 35px;
-                    border-radius: 0;
-                    font-size: 26px;
-                    box-sizing: border-box;
-                }
-                .fa-search {
-                    position: absolute;
-                    top: 50%;
-                    transform: translateY(-50%);
-                    left: 10px;
-                    font-weight: 900;
-                }
-            }
-        }
     }
 }
+
 .contenedor-filtros-busqueda {
     @extend %espaciar-flex;
 }
@@ -101,7 +41,6 @@ label {
     font-size: 13px;
     font-weight: bold;
     letter-spacing: 1px;
-    text-transform: uppercase;
     color: $color-secundario-tipografias;
     margin-right: 10px;
     select {
@@ -117,12 +56,6 @@ label {
             padding: 0px 2px 1px;
         }
     }
-}
-
-.boton-buscar {
-    @include boton;
-    margin-left: 30px;
-    padding: 10px 15px;
 }
 
 .titulo-resultados {
@@ -150,14 +83,6 @@ label {
 
 .paginado {
     @extend %centrar-flex;
-}
-
-.pages-button {
-    @include boton;
-    @extend %centrar-flex;
-    width: 40px;
-    height: 40px;
-    font-size: 25px;
 }
 
 footer {
