--- a/main.css
+++ b/main.css
@@ -1,13 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
-.contenedor-filtros-busqueda, main .seccion-busqueda .contenedor-busqueda {
+.contenedor-filtros-busqueda, .contenedor-busqueda {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
 }
 
-.pages-button, .paginado {
+.paginado, .boton-paginado {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -18,24 +24,7 @@
   margin-inline-end: 0px;
 }
 
-* {
-  margin: 0;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #151515;
-}
-
-header {
-  width: 100%;
-  background-color: #151515;
-  height: 50px;
-}
-header .contenedor-logo {
+.contenedor-logo {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -44,7 +33,7 @@ header .contenedor-logo {
   padding: 0 10px;
   box-sizing: border-box;
 }
-header .contenedor-logo .logo {
+.contenedor-logo .logo {
   background-color: #ed1d23;
   color: #fff;
   font-family: "Bangers", cursive;
@@ -72,6 +61,96 @@ header .contenedor-logo .logo {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.contenedor-busqueda .contenedor-input-busqueda {
+  position: relative;
+  min-width: 50%;
+}
+.contenedor-busqueda .contenedor-input-busqueda .input-busqueda {
+  border: 0;
+  border-bottom: 2px solid #151515;
+  width: 100%;
+  padding: 5px 35px;
+  border-radius: 0;
+  font-size: 26px;
+  box-sizing: border-box;
+}
+.contenedor-busqueda .contenedor-input-busqueda .fa-search {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
+  font-weight: 900;
+}
+
+.boton-buscar {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  background-color: #151515;
+  color: #ffffff;
+  text-transform: uppercase;
+  border: transparent;
+  padding: 5px 10px;
+  margin: 0 5px;
+  transition: 0.2s;
+  margin-left: 30px;
+  padding: 10px 15px;
+}
+
+.boton-paginado {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  background-color: #151515;
+  color: #ffffff;
+  text-transform: uppercase;
+  border: transparent;
+  padding: 5px 10px;
+  margin: 0 5px;
+  transition: 0.2s;
+  width: 40px;
+  height: 40px;
+  font-size: 25px;
+}
+
+.contenedor-filtros-busqueda, .contenedor-busqueda {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.paginado, .boton-paginado {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titulo-resultados, main .seccion-busqueda .titulo-busqueda {
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+* {
+  margin: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: #151515;
+}
+
+header {
+  width: 100%;
+  background-color: #151515;
+  height: 50px;
+}
+
 main {
   width: 100%;
   max-width: 1200px;
@@ -87,32 +166,11 @@ main .seccion-busqueda .titulo-busqueda {
   font-size: 1.5em;
   font-weight: bold;
 }
-main .seccion-busqueda .contenedor-busqueda .contenedor-input-busqueda {
-  position: relative;
-  min-width: 50%;
-}
-main .seccion-busqueda .contenedor-busqueda .contenedor-input-busqueda .input-busqueda {
-  border: 0;
-  border-bottom: 2px solid #151515;
-  width: 100%;
-  padding: 5px 35px;
-  border-radius: 0;
-  font-size: 26px;
-  box-sizing: border-box;
-}
-main .seccion-busqueda .contenedor-busqueda .contenedor-input-busqueda .fa-search {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 10px;
-  font-weight: 900;
-}
 
 label {
   font-size: 13px;
   font-weight: bold;
   letter-spacing: 1px;
-  text-transform: uppercase;
   color: #757575;
   margin-right: 10px;
 }
@@ -128,20 +186,6 @@ label select option {
   white-space: pre;
   min-height: 1.2em;
   padding: 0px 2px 1px;
-}
-
-.boton-buscar {
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  background-color: #151515;
-  color: #ffffff;
-  text-transform: uppercase;
-  border: transparent;
-  padding: 5px 10px;
-  margin: 0 5px;
-  transition: 0.2s;
-  margin-left: 30px;
-  padding: 10px 15px;
 }
 
 .titulo-resultados {
@@ -164,21 +208,6 @@ label select option {
   flex-wrap: wrap;
   margin-top: 40px;
   min-height: 300px;
-}
-
-.pages-button {
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-  background-color: #151515;
-  color: #ffffff;
-  text-transform: uppercase;
-  border: transparent;
-  padding: 5px 10px;
-  margin: 0 5px;
-  transition: 0.2s;
-  width: 40px;
-  height: 40px;
-  font-size: 25px;
 }
 
 footer {
