--- a/main.css
+++ b/main.css
@@ -24,6 +24,10 @@ body {
   margin-inline-end: 0px;
 }
 
+.tarjeta-personaje, .tarjeta-comic {
+  margin: 0 10px 40px;
+}
+
 .contenedor-logo {
   display: flex;
   justify-content: center;
@@ -86,12 +90,11 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   background-color: #151515;
-  color: #ffffff;
+  color: #fff;
   text-transform: uppercase;
   border: transparent;
   padding: 5px 10px;
   margin: 0 5px;
-  transition: 0.2s;
   margin-left: 30px;
   padding: 10px 15px;
 }
@@ -100,15 +103,64 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   background-color: #151515;
-  color: #ffffff;
+  color: #fff;
   text-transform: uppercase;
   border: transparent;
   padding: 5px 10px;
   margin: 0 5px;
-  transition: 0.2s;
   width: 40px;
   height: 40px;
   font-size: 25px;
+}
+
+.tarjeta-comic {
+  width: calc(100% / 5 - 2 * 10px);
+  display: flex;
+  flex-direction: column;
+}
+.tarjeta-comic .contenedor-imagen-comic {
+  flex-grow: 1;
+}
+.tarjeta-comic .contenedor-imagen-comic .imagen-comic {
+  height: 100%;
+  width: 100%;
+  box-shadow: 0 26px 24px -16px rgba(0, 0, 0, 0.4);
+  margin-bottom: 20px;
+}
+.tarjeta-comic .titulo-comic {
+  height: 64px;
+  margin-top: 25px;
+  font-size: 14px;
+}
+
+.tarjeta-personaje {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 6 - 2 * 10px);
+}
+.tarjeta-personaje .contenedor-imagen-personaje {
+  flex-grow: 1;
+  border-bottom: 4px solid #ed1d23;
+  overflow: hidden;
+}
+.tarjeta-personaje .contenedor-imagen-personaje .imagen-personaje {
+  height: 100%;
+  width: 100%;
+  box-shadow: 0 26px 24px -16px rgba(0, 0, 0, 0.4);
+  margin-bottom: 20px;
+  object-fit: cover;
+}
+.tarjeta-personaje .contenedor-nombre-personaje {
+  padding: 16px 24px 17px 20px;
+  background-color: #151515;
+  transition: 0.2s;
+}
+.tarjeta-personaje .contenedor-nombre-personaje .nombre-personaje {
+  color: #fff;
+  text-transform: uppercase;
+  height: 79px;
+  margin-bottom: 0;
+  font-size: 14px;
 }
 
 .contenedor-filtros-busqueda, .contenedor-busqueda {
@@ -134,6 +186,10 @@ body {
   margin-block-end: 0.83em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+}
+
+.tarjeta-comic, .tarjeta-personaje {
+  margin: 0 10px 40px;
 }
 
 * {
