correcciones en maquetado y organizacion de sass

--- a/layout/_layout.scss
+++ b/layout/_layout.scss
@@ -58,6 +58,10 @@ label {
     }
 }
 
+.contenedor-busqueda {
+    @extend %espaciar-flex;
+}
+
 .titulo-resultados {
     @extend %margenes-titulos;
     display: block;
