--- a/main.css
+++ b/main.css
@@ -266,6 +266,11 @@ label select option {
   min-height: 300px;
 }
 
+.paginado .boton-paginado:disabled {
+  color: #757575;
+  border-color: #757575;
+}
+
 footer {
   width: 100%;
   padding: 30px 0 40px;
