--- a/abstracts/_abstracts.scss
+++ b/abstracts/_abstracts.scss
@@ -27,6 +27,13 @@
     margin: 0 10px 40px;
 }
 
+%margenes-info {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 @mixin boton {
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
